Fixed grid on narrow screens

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,7 +26,7 @@
   letter-spacing: 2px;
   border: none;
   background-color: transparent;
-  
+
 }
 
 .footer {
@@ -152,8 +152,7 @@
 
 @media (max-width: 600px) {
   .grid {
-    width: 100%;
-    flex-direction: column;
+    display: grid;
   }
 }
 
